# Segs

./: CMakeLists.txt  README.md
Components/: BitStream.cpp  BitStream.h  Buffer.cpp  Buffer.h  EventProcessor.cpp  EventProcessor.h  LinkLevelEvent.h  Logging.cpp  Logging.h  PasswordHasher.cpp  SEGSEvent.cpp  SEGSEvent.h  SEGSTimer.cpp  SEGSTimer.h  Settings.cpp  serialization_common.h
Projects/CoX/: CMakeLists.txt
Projects/CoX/Common/: CMakeLists.txt
Projects/CoX/Common/AuthProtocol/: AuthEventFactory.cpp  AuthEventFactory.h  AuthLink.cpp  AuthLink.h  AuthOpcodes.h  AuthPacketCodec.cpp
Projects/CoX/Common/CRUDP_Protocol/: CRUDP_Packet.cpp  CRUDP_Packet.h  CRUDP_Protocol.cpp  CRUDP_Protocol.h  CRUD_Events.h  CRUD_Link.cpp  CRUD_Link.h  ILink.h
Projects/CoX/Common/GameData/: Character.cpp  Character.h  CharacterAttributes.h  CharacterClass.h  ClientStates.h  CoHMath.h  CommonNetStructures.cpp  CommonNetStructures.h  Costume.cpp  Costume.h  DataStorage.cpp  DataStorage.h  Entity.cpp  Entity.h  LFG.cpp  LFG.h  NpcStore.cpp  StateInterpolator.cpp  Team.cpp  Team.h  anim_definitions.h  anim_serializers.cpp  attrib_serializers.cpp  attrib_serializers.h  bodypart_definitions.h  bodypart_serializers.cpp  bodypart_serializers.h  charclass_serializers.cpp  chardata_serializers.cpp  chardata_serializers.h  clientoptions_definitions.h  clientoptions_serializers.cpp  clientoptions_serializers.h  (+30 more)
Projects/CoX/Common/MapLoader/: CMakeLists.txt  CoHSceneConverter.cpp  CoHSceneConverter.h
Projects/CoX/Data/: settings.cfg
Projects/CoX/docs/: README.md
include/: version.h
(+123 files in other folders)
